feat: add new field isVerifed in articles table
