# apps/api/src/articles/articles-service.ts
@@ -1,17 +1,30 @@
 import { prisma } from "../../libs/prisma/constants";
 
 const getArticles = async () => {
-  return await prisma.articles.findMany();
+  return await prisma.articles.findMany({
+    select: {
+      imageSrc: true,
+      author: true,
+      title: true,
+      id: true,
+    },
+    where: {
+      isVerified: true,
+    },
+  });
 };
 
-const createArticle = async (article: {
-  imageSrc: string;
+const createArticle = async ({
+  title,
+  url,
+}: {
+  imageSrc?: string;
   url: string;
   title: string;
   author?: string;
 }) => {
   return await prisma.articles.create({
-    data: article,
+    data: { title, url },
   });
 };
 
